fix(security): resolve CORS preflight failure